Place binary at topdir
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/trunk@4 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -11,6 +11,6 @@ all_sources = gui_sources + structure_sources + unit_sources + base_sources
 
 SDL_rwops_zzip = env.Object('SDL_rwops_zzip.c')
 
-env.Program("dunelegacy", all_sources + [SDL_rwops_zzip])
+env.Program("../dunelegacy", all_sources + [SDL_rwops_zzip])
 
 
