more font stuff
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@36 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -18,6 +18,7 @@ all_sources = [ "Application.cpp",
                 "DataFile.cpp",
 
                 "TopLevelState.cpp",
+                "MenuBase.cpp", 
                 "MainMenu.cpp", 
                 "SingleMenu.cpp", 
 
