--- a/src/pakfile/SConscript
+++ b/src/pakfile/SConscript
@@ -27,9 +27,9 @@ all_sources = [ "Application.cpp",
                 "gui2/Button.cpp",
                 "gui2/VBox.cpp",
 
-                "pakfile/Cpsfile.cpp",
+                "pakfile/CpsFile.cpp",
                 "pakfile/Decode.cpp",
-                "pakfile/Icnfile.cpp",
+                "pakfile/IcnFile.cpp",
                 "pakfile/Pakfile.cpp",
                 "pakfile/Shpfile.cpp",
                 "pakfile/Wsafile.cpp",
