commiting resource manager to test on linux
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@48 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -22,6 +22,8 @@ all_sources = [ "Application.cpp",
                 "MainMenu.cpp", 
                 "SingleMenu.cpp", 
 
+                "ResMan.cpp",
+
                 "gui2/Widget.cpp",
                 "gui2/Container.cpp",
                 "gui2/Button.cpp",
