--- a/src/SConscript
+++ b/src/SConscript
@@ -20,6 +20,7 @@ all_sources = [ "Application.cpp",
                 "TopLevelState.cpp",
                 "MenuBase.cpp", 
                 "MainMenu.cpp", 
+                "IntroState.cpp", 
                 "SingleMenu.cpp", 
 
                 "ResMan.cpp",
@@ -35,6 +36,7 @@ all_sources = [ "Application.cpp",
                 "pakfile/Pakfile.cpp",
                 "pakfile/Shpfile.cpp",
                 "pakfile/Wsafile.cpp",
+                "pakfile/Palette.cpp",
 
                 "main.cpp",
               ]
