Gfx routines centralization.
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@70 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -24,6 +24,8 @@ all_sources = [ "Application.cpp",
                 "MainMenu.cpp", 
                 "IntroState.cpp", 
                 "SingleMenu.cpp", 
+                "Gfx.cpp",
+                "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
 
                 "ResMan.cpp",
               ]
