--- a/src/SConscript
+++ b/src/SConscript
@@ -23,7 +23,8 @@ all_sources = [ "Application.cpp",
                 "MenuBase.cpp", 
                 "MainMenu.cpp", 
                 "IntroState.cpp", 
-                "SingleMenu.cpp", 
+                "SingleMenu.cpp",
+                "OptionsMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
 
