--- a/src/SConscript
+++ b/src/SConscript
@@ -27,6 +27,7 @@ all_sources = [ "Application.cpp",
                 "OptionsMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
+                "Log.cpp",
 
                 "ResMan.cpp",
               ]
