- added MSVS soloution and project  - set compiler to include debug info for win32 builds  - temporary fix for undefined symbols in Buttons when using Gfx  - bit of drawing code for the buttons ( shutdownrunner has more i think )  - commented out Log.cpp in SConscript as it still doesnt work on win32. need to replace vsnprintf  - added clear color setting to application
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@87 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -27,7 +27,7 @@ all_sources = [ "Application.cpp",
                 "OptionsMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
-                "Log.cpp",
+                #"Log.cpp",
 
                 "ResMan.cpp",
               ]
@@ -50,7 +50,7 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
               ]
 
 gamelib = env.StaticLibrary("dune_game", all_sources)
-guilib  = env.StaticLibrary("dune_gui", gui_sources)
+guilib  = env.StaticLibrary("dune_gui", gui_sources + gamelib)
 paklib  = env.StaticLibrary("dune_pak", pak_sources)
 
 dunelegacy = env.Program("../dunelegacy", ["main.cpp", gamelib, guilib, paklib] )
@@ -58,5 +58,4 @@ pakview = env.Program("../pakview", ["pakview.cpp", gamelib, guilib, paklib] )
 
 Default(dunelegacy)
 Default(pakview)
-
 
