--- a/src/SConscript
+++ b/src/SConscript
@@ -27,8 +27,9 @@ all_sources = [ "Application.cpp",
                 "OptionsMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
-                #"Log.cpp",
-
+                "String.cpp",
+                "Log.cpp",
+		
                 "ResMan.cpp",
               ]
 
