String.h/cpp -> Strings.h/cpp
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@89 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -27,7 +27,7 @@ all_sources = [ "Application.cpp",
                 "OptionsMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
-                "String.cpp",
+                "Strings.cpp",
                 "Log.cpp",
 		
                 "ResMan.cpp",
