- temporarily disable libs and build as one monolithic app again until libs can be properly implemented
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@90 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -50,13 +50,13 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
                 "pakfile/Palette.cpp",
               ]
 
-gamelib = env.StaticLibrary("dune_game", all_sources)
-guilib  = env.StaticLibrary("dune_gui", gui_sources + gamelib)
-paklib  = env.StaticLibrary("dune_pak", pak_sources)
+#gamelib = env.StaticLibrary("dune_game", all_sources)
+#guilib  = env.StaticLibrary("dune_gui", gui_sources + gamelib)
+#paklib  = env.StaticLibrary("dune_pak", pak_sources)
 
-dunelegacy = env.Program("../dunelegacy", ["main.cpp", gamelib, guilib, paklib] )
-pakview = env.Program("../pakview", ["pakview.cpp", gamelib, guilib, paklib] )
+dunelegacy = env.Program("../dunelegacy", ["main.cpp"] + all_sources + gui_sources + pak_sources )
+#pakview = env.Program("../pakview", ["pakview.cpp", gamelib, guilib, paklib] )
 
 Default(dunelegacy)
-Default(pakview)
+#Default(pakview)
 
