- added config file (preview version ;-) )
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@92 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -29,6 +29,7 @@ all_sources = [ "Application.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
                 "Strings.cpp",
                 "Log.cpp",
+                "ConfigFile.cpp",
 		
                 "ResMan.cpp",
               ]
