- replaced misused boost::filesystem::path with std::string  - updated vcproj to include ConfigFile
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@94 22675075-b818-0410-8b9e-df876f89efe1

--- a/dunelegacy.vcproj
+++ b/dunelegacy.vcproj
@@ -66,6 +66,12 @@
 				RelativePath=".\include\CommViewClass.h">
 			</File>
 			<File
+				RelativePath=".\src\ConfigFile.cpp">
+			</File>
+			<File
+				RelativePath=".\include\ConfigFile.h">
+			</File>
+			<File
 				RelativePath=".\src\CutScene.cpp">
 			</File>
 			<File
