- added RTTI for windows build  - added new files to vcproj
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@99 22675075-b818-0410-8b9e-df876f89efe1

--- a/dunelegacy.vcproj
+++ b/dunelegacy.vcproj
@@ -306,6 +306,12 @@
 				RelativePath=".\include\State.h">
 			</File>
 			<File
+				RelativePath=".\src\Strings.cpp">
+			</File>
+			<File
+				RelativePath=".\include\Strings.h">
+			</File>
+			<File
 				RelativePath=".\src\TerrainClass.cpp">
 			</File>
 			<File
