- Make dunelegacy compilable - No buttons are clickable. No idea why. Yet
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@110 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -17,7 +17,7 @@ all_sources = [ "Application.cpp",
                 "Settings.cpp",
                 "Font.cpp",
                 "State.cpp",            
-                "DataFile.cpp",
+#                "DataFile.cpp",
 
                 "TopLevelState.cpp",
                 "MenuBase.cpp", 
