- Added label. It will be useful I hope - And a small test of my image cropping skills. Could someone with a bit of free time make a list of how to cut images to make menus, in-game panels, etc. ?
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@124 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -39,6 +39,7 @@ gui_sources = [
                 "gui2/Container.cpp",
                 "gui2/Button.cpp",
                 "gui2/VBox.cpp",
+                "gui2/Label.cpp",
 
               ]
 
