--- a/doxygen.conf
+++ b/doxygen.conf
@@ -75,7 +75,7 @@ WARN_LOGFILE           =
 INPUT                  = include/
 FILE_PATTERNS          = *.h
 RECURSIVE              = YES
-EXCLUDE                = include/gui/*.h
+EXCLUDE                = include/gui/
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXAMPLE_PATH           = 
