* One commit, once a year:) * Make sure you have .PAK in paks dir * Run ./test instead of ./dunelegacy * Reverted Log.cpp, Log.h so it probably won't compile on 64bit computer. Just for a moment hopefuly * Don't expect too much
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@130 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -18,7 +18,7 @@ all_sources = [ "Application.cpp",
                 "Font.cpp",
                 "State.cpp",            
 #                "DataFile.cpp",
-
+                "PictureFactory.cpp",
                 "TopLevelState.cpp",
                 "MenuBase.cpp", 
                 "MainMenu.cpp", 
@@ -52,13 +52,27 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
                 "pakfile/Palette.cpp",
               ]
 
+pakview_sources = [  "Application.cpp", 
+                     "ConfigFile.cpp",
+                     "DataCache.cpp",
+                     "Font.cpp",
+                     "Gfx.cpp", 
+                     "houses.cpp",
+                     "Log.cpp",
+                     "ResMan.cpp",                     
+                     "Settings.cpp",
+                     "Strings.cpp",
+                     "State.cpp",
+                     "TopLevelState.cpp",
+                  ]
+
 #gamelib = env.StaticLibrary("dune_game", all_sources)
 #guilib  = env.StaticLibrary("dune_gui", gui_sources + gamelib)
 #paklib  = env.StaticLibrary("dune_pak", pak_sources)
 
 dunelegacy = env.Program("../dunelegacy", ["main.cpp"] + all_sources + gui_sources + pak_sources )
-#pakview = env.Program("../pakview", ["pakview.cpp", gamelib, guilib, paklib] )
+pakview = env.Program("../test", ["pakview.cpp"] + pakview_sources + gui_sources + pak_sources )
 
-Default(dunelegacy)
-#Default(pakview)
+#Default(dunelegacy)
+Default(pakview)
 
