--- a/src/SConscript
+++ b/src/SConscript
@@ -18,7 +18,7 @@ all_sources = [ "Application.cpp",
                 "Font.cpp",
                 "State.cpp",            
 #                "DataFile.cpp",
-                "PictureFactory.cpp",
+#                "PictureFactory.cpp",
                 "TopLevelState.cpp",
                 "MenuBase.cpp", 
                 "MainMenu.cpp", 
@@ -73,6 +73,6 @@ pakview_sources = [  "Application.cpp",
 dunelegacy = env.Program("../dunelegacy", ["main.cpp"] + all_sources + gui_sources + pak_sources )
 pakview = env.Program("../test", ["pakview.cpp"] + pakview_sources + gui_sources + pak_sources )
 
-#Default(dunelegacy)
-Default(pakview)
+Default(dunelegacy)
+#Default(pakview)
 
