grf, clean up more mess after renaming..
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@181 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -24,8 +24,11 @@ all_sources = [ "Application.cpp",
                 "MainMenu.cpp", 
                 "IntroState.cpp", 
                 "SingleMenu.cpp",
-				"CampaignMenu.cpp",
+#				"CampaignMenu.cpp",
                 "OptionsMenu.cpp",
+				"MentatMenu.cpp",
+				"HouseChoiceMenu.cpp",
+				"HouseChoiceInfoMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
                 "Strings.cpp",
@@ -33,7 +36,8 @@ all_sources = [ "Application.cpp",
                 "ConfigFile.cpp",
                 "ResMan.cpp",
 				"SoundPlayerClass.cpp",
-				"pakfile/StringFile.cpp",
+				"pakfile/Animation.cpp",
+				"pakfile/Stringfile.cpp",
 				"pakfile/Vocfile.cpp",
 				"pakfile/IntegratedLibSampleRate/samplerate.c",
 				"pakfile/IntegratedLibSampleRate/src_linear.c",
