add adlib player from richies branch
git-svn-id: https://dunelegacy.svn.sourceforge.net/svnroot/dunelegacy/branches/dunks@202 22675075-b818-0410-8b9e-df876f89efe1

--- a/src/SConscript
+++ b/src/SConscript
@@ -38,11 +38,14 @@ all_sources = [ "Application.cpp",
 				"SoundPlayerClass.cpp",
 				"pakfile/Animation.cpp",
 				"pakfile/Stringfile.cpp",
-				"pakfile/Vocfile.cpp",
-				"pakfile/IntegratedLibSampleRate/samplerate.c",
-				"pakfile/IntegratedLibSampleRate/src_linear.c",
-				"pakfile/IntegratedLibSampleRate/src_sinc.c",
-				"pakfile/IntegratedLibSampleRate/src_zoh.c"
+				"pakfile/sound/Vocfile.cpp",
+				"pakfile/sound/IntegratedLibSampleRate/samplerate.c",
+				"pakfile/sound/IntegratedLibSampleRate/src_linear.c",
+				"pakfile/sound/IntegratedLibSampleRate/src_sinc.c",
+				"pakfile/sound/IntegratedLibSampleRate/src_zoh.c",
+				"pakfile/sound/adl/adl.cpp",
+				"pakfile/sound/adl/emuopl.cpp",
+				"pakfile/sound/adl/fmopl.cpp"
               ]
 
 gui_sources = [
