--- a/src/SConscript
+++ b/src/SConscript
@@ -39,10 +39,6 @@ all_sources = [ "Application.cpp",
 				"pakfile/Animation.cpp",
 				"pakfile/Stringfile.cpp",
 				"pakfile/sound/Vocfile.cpp",
-				"pakfile/sound/IntegratedLibSampleRate/samplerate.c",
-				"pakfile/sound/IntegratedLibSampleRate/src_linear.c",
-				"pakfile/sound/IntegratedLibSampleRate/src_sinc.c",
-				"pakfile/sound/IntegratedLibSampleRate/src_zoh.c",
 				"pakfile/sound/adl/adl.cpp",
 				"pakfile/sound/adl/emuopl.cpp",
 				"pakfile/sound/adl/fmopl.cpp"
@@ -79,11 +75,7 @@ pakview_sources = [  "Application.cpp",
                      "State.cpp",
                      "TopLevelState.cpp",
 					 "SoundPlayerClass.cpp",
-					 "pakfile/Vocfile.cpp",
-					 "pakfile/IntegratedLibSampleRate/samplerate.c",
-					 "pakfile/IntegratedLibSampleRate/src_linear.c",
-					 "pakfile/IntegratedLibSampleRate/src_sinc.c",
-					 "pakfile/IntegratedLibSampleRate/src_zoh.c"
+					 "pakfile/Vocfile.cpp"
                   ]
 
 #gamelib = env.StaticLibrary("dune_game", all_sources)
