- Fixed mapping of images - Log is now used everywhere - Tried to put #includes in some more organised order, but still a lot to do

--- a/src/SConscript
+++ b/src/SConscript
@@ -41,7 +41,7 @@ all_sources = [ "Application.cpp",
 				"pakfile/sound/Vocfile.cpp",
 				"pakfile/sound/adl/adl.cpp",
 				"pakfile/sound/adl/emuopl.cpp",
-				"pakfile/sound/adl/fmopl.cpp"
+				"pakfile/sound/adl/fmopl.c"
               ]
 
 gui_sources = [
