--- a/src/SConscript
+++ b/src/SConscript
@@ -34,12 +34,6 @@ all_sources = [ "Application.cpp",
                 "ConfigFile.cpp",
                 "ResMan.cpp",
 				"SoundPlayerClass.cpp",
-                "pakfile/sound/adl/adl.cpp",
-                "pakfile/sound/adl/emuopl.cpp",
-                "pakfile/sound/adl/fmopl.c",
-				"pakfile/Animation.cpp",
-				"pakfile/Stringfile.cpp",
-				"pakfile/sound/Vocfile.cpp",
               ]
 
 gui_sources = [
@@ -58,6 +52,12 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
                 "pakfile/Shpfile.cpp",
                 "pakfile/Wsafile.cpp",
                 "pakfile/Palette.cpp",
+                "pakfile/sound/adl/adl.cpp",
+                "pakfile/sound/adl/emuopl.cpp",
+                "pakfile/sound/adl/fmopl.c",
+				"pakfile/Animation.cpp",
+				"pakfile/Stringfile.cpp",
+				"pakfile/sound/Vocfile.cpp",
               ]
 
 pakview_sources = [  "Application.cpp", 
@@ -73,20 +73,12 @@ pakview_sources = [  "Application.cpp",
                      "State.cpp",
                      "TopLevelState.cpp",
 					 "SoundPlayerClass.cpp",
-					 "pakfile/Vocfile.cpp",
-					 "pakfile/IntegratedLibSampleRate/samplerate.c",
-					 "pakfile/IntegratedLibSampleRate/src_linear.c",
-					 "pakfile/IntegratedLibSampleRate/src_sinc.c",
-					 "pakfile/IntegratedLibSampleRate/src_zoh.c"
                   ]
 
-#gamelib = env.StaticLibrary("dune_game", all_sources)
-#guilib  = env.StaticLibrary("dune_gui", gui_sources + gamelib)
-#paklib  = env.StaticLibrary("dune_pak", pak_sources)
 
 dunelegacy = env.Program("../dunelegacy", ["main.cpp"] + all_sources + gui_sources + pak_sources )
-pakview = env.Program("../test", ["pakview.cpp"] + pakview_sources + gui_sources + pak_sources )
+pakview = env.Program("../pakview", ["pakview.cpp"] + pakview_sources + gui_sources + pak_sources )
 
 Default(dunelegacy)
-#Default(pakview)
+Default(pakview)
 
