- Renamed SoundPlayerClass to SoundPlayerClass. It's shorter to write - Sound settings are stored in Settings singleton. Setting and SoundPlayer are friends.

--- a/src/SConscript
+++ b/src/SConscript
@@ -33,7 +33,7 @@ all_sources = [ "Application.cpp",
                 "Log.cpp",
                 "ConfigFile.cpp",
                 "ResMan.cpp",
-				"SoundPlayerClass.cpp",
+				"SoundPlayer.cpp",
               ]
 
 gui_sources = [
@@ -72,7 +72,7 @@ pakview_sources = [  "Application.cpp",
                      "Strings.cpp",
                      "State.cpp",
                      "TopLevelState.cpp",
-					 "SoundPlayerClass.cpp",
+					 "SoundPlayer.cpp",
                   ]
 
 
