- Added ObjectClass and PlayerClass - Editor shows two different maps at the same time, which wasn't possible with global map, etc. - It's all one big mess, but eventually it should look and work like as Swiss clock.

--- a/src/SConscript
+++ b/src/SConscript
@@ -41,6 +41,11 @@ all_sources = [ "Application.cpp",
 				"MapGenerator.cpp",
 				"mmath.cpp",
 				"MapSeed.cpp",
+				"PlayerClass.cpp",
+				"ObjectClass.cpp",
+				"structures/StructureClass.cpp",
+				"structures/WallClass.cpp",				
+				"structures/SiloClass.cpp",
               ]
 
 gui_sources = [
