--- a/config.py.example
+++ b/config.py.example
@@ -1,6 +1,12 @@
-SDL_INCLUDE_PATH = r"E:\projects\include\SDL\SDL-1.2.11\include"
-SDL_LIB_PATH = r"E:\projects\include\SDL\SDL-1.2.11\lib"
-ZLIB_INCLUDE_PATH = r"E:\projects\include\zlib123-dll\include"
-ZLIB_LIB_PATH = r"E:\projects\include\zlib123-dll\lib"
-ZZIP_INCLUDE_PATH = "E:\projects\include\zziplib-0.10.82-msvc6-lib\include"
-ZZIP_LIB_PATH = "E:\projects\include\zziplib-0.10.82-msvc6-lib\lib"
+SDL_INCLUDE_PATH = r"c:\tmp\SDL-1.2.13\include"
+SDL_LIB_PATH = r"c:\tmp\SDL-1.2.13\lib"
+SDLNET_INCLUDE_PATH = r"c:\tmp\SDL_net-1.2.7\include"
+SDLNET_LIB_PATH = r"c:\tmp\SDL_net-1.2.7\lib"
+SDLMIXER_INCLUDE_PATH = r"c:\tmp\SDL_mixer-1.2.8\include"
+SDLMIXER_LIB_PATH = r"c:\tmp\SDL_mixer-1.2.8\lib"
+SDLTTF_INCLUDE_PATH = r"c:\tmp\SDL_ttf-2.0.9\include"
+SDLTTF_LIB_PATH = r"c:\tmp\SDL_ttf-2.0.9\lib"
+BOOST_INCLUDE_PATH = r"C:\Program Files\boost\boost_1_35_0"
+BOOST_LIB_PATH = r"C:\Program Files\boost\boost_1_35_0\lib"
+SAMPLERATE_INCLUDE_PATH = r"c:\tmp\samplerate"
+SAMPLERATE_LIB_PATH = r"c:\tmp\samplerate"
