--- a/src/SConscript
+++ b/src/SConscript
@@ -46,6 +46,9 @@ all_sources = [ "Application.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",				
 				"structures/SiloClass.cpp",
+				"units/UnitClass.cpp",
+				"units/GroundUnit.cpp",				
+				"units/QuadClass.cpp",				
               ]
 
 gui_sources = [
