- Added GameState to keep settigns and lists for current Game - TODO: Eventually rename it, so that its name is not confused with States used by StateMachine

--- a/src/SConscript
+++ b/src/SConscript
@@ -49,6 +49,7 @@ all_sources = [ "Application.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
 				"units/QuadClass.cpp",				
+				"GameState.cpp",
               ]
 
 gui_sources = [
