improve drawing stuff and move things out to separate classes etc..

--- a/src/SConscript
+++ b/src/SConscript
@@ -58,6 +58,7 @@ gui_sources = [
                 "gui2/Button.cpp",
                 "gui2/VBox.cpp",
                 "gui2/Label.cpp",
+                "gui2/Frame.cpp",
 
               ]
 
