* create a base class for all states in main menu * make graphics drawn relative to resolution * automatically adjust graphics when changing resolution

--- a/src/SConscript
+++ b/src/SConscript
@@ -19,7 +19,8 @@ all_sources = [ "Application.cpp",
 #                "PictureFactory.cpp",
                 "TopLevelState.cpp",
                 "MenuBase.cpp", 
-                "MainMenu.cpp", 
+                "MainMenu.cpp",
+                "MainMenuBase.cpp",
                 "IntroState.cpp", 
                 "SingleMenu.cpp",
 #				"CampaignMenu.cpp",
