* rename and move pakfile/adlwrap to AdlibPlayer * move pakfile/sound/Vocfile to pakfile/sound

--- a/src/SConscript
+++ b/src/SConscript
@@ -35,6 +35,7 @@ all_sources = [ "Application.cpp",
                 "ConfigFile.cpp",
                 "ResMan.cpp",
 				"SoundPlayer.cpp",
+                "AdlibPlayer.cpp",
 				"TerrainClass.cpp",
 				"MapClass.cpp",
 				"Editor.cpp",
@@ -72,10 +73,9 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
                 "pakfile/Shpfile.cpp",
                 "pakfile/Wsafile.cpp",
                 "pakfile/Palette.cpp",
-                "pakfile/sound/adlwrap.cpp",
-		"pakfile/Animation.cpp",
-		"pakfile/Stringfile.cpp",
-		"pakfile/sound/Vocfile.cpp",
+                "pakfile/Animation.cpp",
+                "pakfile/Stringfile.cpp",
+                "pakfile/Vocfile.cpp",
               ]
 
 pakview_sources = [  "Application.cpp", 
@@ -90,7 +90,8 @@ pakview_sources = [  "Application.cpp",
                      "Strings.cpp",
                      "State.cpp",
                      "TopLevelState.cpp",
-		     "SoundPlayer.cpp",
+                     "SoundPlayer.cpp",
+                     "AdlibPlayer.cpp",
                   ]
 
 
