start on the skirmish menu

--- a/src/SConscript
+++ b/src/SConscript
@@ -23,6 +23,7 @@ all_sources = [ "Application.cpp",
                 "MainMenuBase.cpp",
                 "IntroState.cpp", 
                 "SingleMenu.cpp",
+                "SkirmishMenu.cpp",
 #				"CampaignMenu.cpp",
                 "OptionsMenu.cpp",
 				"MentatMenu.cpp",
