start on adding a common GameMenuState class for all in game states

--- a/src/SConscript
+++ b/src/SConscript
@@ -18,6 +18,7 @@ all_sources = [ "Application.cpp",
                 "DataCache.cpp",
 #                "PictureFactory.cpp",
                 "TopLevelState.cpp",
+		"GameMenu.cpp",
                 "MenuBase.cpp", 
                 "MainMenu.cpp",
                 "MainMenuBase.cpp",
