add barracks just to test..

--- a/src/SConscript
+++ b/src/SConscript
@@ -47,6 +47,7 @@ all_sources = [ "Application.cpp",
 				"MapSeed.cpp",
 				"PlayerClass.cpp",
 				"ObjectClass.cpp",
+				"structures/BarracksClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",				
 				"structures/SiloClass.cpp",
