add WOR structure

--- a/src/SConscript
+++ b/src/SConscript
@@ -51,6 +51,7 @@ all_sources = [ "Application.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",				
 				"structures/SiloClass.cpp",
+				"structures/WORClass.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
 				"units/QuadClass.cpp",				
