add light factory structure

--- a/src/SConscript
+++ b/src/SConscript
@@ -48,8 +48,9 @@ all_sources = [ "Application.cpp",
 				"PlayerClass.cpp",
 				"ObjectClass.cpp",
 				"structures/BarracksClass.cpp",
+				"structures/LightFactoryClass.cpp",
 				"structures/StructureClass.cpp",
-				"structures/WallClass.cpp",				
+				"structures/WallClass.cpp",
 				"structures/SiloClass.cpp",
 				"structures/WORClass.cpp",
 				"units/UnitClass.cpp",
