add house of IX structure

--- a/src/SConscript
+++ b/src/SConscript
@@ -49,6 +49,7 @@ all_sources = [ "Application.cpp",
 				"ObjectClass.cpp",
 				"structures/BarracksClass.cpp",
 				"structures/LightFactoryClass.cpp",
+				"structures/IXClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
 				"structures/SiloClass.cpp",
