--- a/src/SConscript
+++ b/src/SConscript
@@ -51,9 +51,10 @@ all_sources = [ "Application.cpp",
 				"structures/HighTechFactoryClass.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
+				"structures/PalaceClass.cpp",
+				"structures/SiloClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
-				"structures/SiloClass.cpp",
 				"structures/WORClass.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
