add refinery structure

--- a/src/SConscript
+++ b/src/SConscript
@@ -52,6 +52,7 @@ all_sources = [ "Application.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
 				"structures/PalaceClass.cpp",
+				"structures/RefineryClass.cpp",
 				"structures/SiloClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
