--- a/src/SConscript
+++ b/src/SConscript
@@ -48,6 +48,7 @@ all_sources = [ "Application.cpp",
 				"PlayerClass.cpp",
 				"ObjectClass.cpp",
 				"structures/BarracksClass.cpp",
+				"structures/ConstructionYardClass.cpp",
 				"structures/HighTechFactoryClass.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
