--- a/src/SConscript
+++ b/src/SConscript
@@ -49,6 +49,7 @@ all_sources = [ "Application.cpp",
 				"ObjectClass.cpp",
 				"structures/BarracksClass.cpp",
 				"structures/ConstructionYardClass.cpp",
+				"structures/GunTurretClass.cpp",
 				"structures/HighTechFactoryClass.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
