add heavy factory

--- a/src/SConscript
+++ b/src/SConscript
@@ -50,6 +50,7 @@ all_sources = [ "Application.cpp",
 				"structures/BarracksClass.cpp",
 				"structures/ConstructionYardClass.cpp",
 				"structures/GunTurretClass.cpp",
+				"structures/HeavyFactoryClass.cpp",
 				"structures/HighTechFactoryClass.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
