--- a/src/SConscript
+++ b/src/SConscript
@@ -55,6 +55,7 @@ all_sources = [ "Application.cpp",
 				"structures/IXClass.cpp",
 				"structures/LightFactoryClass.cpp",
 				"structures/PalaceClass.cpp",
+				"structures/RadarClass.cpp",
 				"structures/RefineryClass.cpp",
 				"structures/SiloClass.cpp",
 				"structures/StructureClass.cpp",
