add repair yard

--- a/src/SConscript
+++ b/src/SConscript
@@ -57,6 +57,7 @@ all_sources = [ "Application.cpp",
 				"structures/PalaceClass.cpp",
 				"structures/RadarClass.cpp",
 				"structures/RefineryClass.cpp",
+				"structures/RepairYardClass.cpp",
 				"structures/SiloClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
