--- a/src/SConscript
+++ b/src/SConscript
@@ -59,6 +59,7 @@ all_sources = [ "Application.cpp",
 				"structures/RefineryClass.cpp",
 				"structures/RepairYardClass.cpp",
 				"structures/SiloClass.cpp",
+				"structures/StarPortClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
 				"structures/WORClass.cpp",
