--- a/src/SConscript
+++ b/src/SConscript
@@ -62,6 +62,7 @@ all_sources = [ "Application.cpp",
 				"structures/StarPortClass.cpp",
 				"structures/StructureClass.cpp",
 				"structures/WallClass.cpp",
+				"structures/WindTrapClass.cpp",
 				"structures/WORClass.cpp",
 				"units/UnitClass.cpp",
 				"units/GroundUnit.cpp",				
