add rocket turret

--- a/src/SConscript
+++ b/src/SConscript
@@ -58,6 +58,7 @@ all_sources = [ "Application.cpp",
 				"structures/RadarClass.cpp",
 				"structures/RefineryClass.cpp",
 				"structures/RepairYardClass.cpp",
+				"structures/RocketTurretClass.cpp",
 				"structures/SiloClass.cpp",
 				"structures/StarPortClass.cpp",
 				"structures/StructureClass.cpp",
