move to use external library for handling fonts

--- a/src/SConscript
+++ b/src/SConscript
@@ -13,7 +13,7 @@ all_sources = gui_sources + structure_sources + unit_sources + base_sources
 
 all_sources = [ "Application.cpp",
                 "Settings.cpp",
-                "Font.cpp",
+                "FontManager.cpp",
                 "State.cpp",            
                 "DataCache.cpp",
 #                "PictureFactory.cpp",
@@ -96,7 +96,7 @@ pak_sources = [ "pakfile/Cpsfile.cpp",
 pakview_sources = [  "Application.cpp", 
                      "ConfigFile.cpp",
                      "DataCache.cpp",
-                     "Font.cpp",
+                     "FontManager.cpp",
                      "Gfx.cpp", 
                      "houses.cpp",
                      "Log.cpp",
