start on mentat info menu

--- a/src/SConscript
+++ b/src/SConscript
@@ -27,9 +27,10 @@ all_sources = [ "Application.cpp",
                 "SkirmishMenu.cpp",
 #				"CampaignMenu.cpp",
                 "OptionsMenu.cpp",
-				"MentatMenu.cpp",
-				"HouseChoiceMenu.cpp",
-				"HouseChoiceInfoMenu.cpp",
+		"MentatMenu.cpp",
+		"MentatInfoMenu.cpp",
+		"HouseChoiceMenu.cpp",
+		"HouseChoiceInfoMenu.cpp",
                 "Gfx.cpp",
                 "houses.cpp",		# just for colors, hope there will be a better place for these (otpetrik)
                 "Strings.cpp",
